<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/DaySelection"
            android:textSize="@dimen/default_text_Size"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <CalendarView
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="yesterday"
                android:text="@string/yesterday"
                android:textSize="@dimen/default_text_Size" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="today"
                android:text="@string/today"
                android:textSize="@dimen/default_text_Size" />

            <Button
                android:id="@+id/applayNewData"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="applyData"
                android:text="@string/apply"
                android:textSize="@dimen/default_text_Size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/greeting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="@dimen/text_Size_big" />

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/null2"
            android:gravity="start"
            android:padding="10dp" />

         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="10dp"             
             tools:ignore="MissingRegistered" />

    </LinearLayout>

</LinearLayout>